==  ==
-I18n revamp
	-Translation system reworked to use I18n-js for easier translating
	-Multiple i18n MESSAGES replaced or moved to custom messages due to UCP removing many messages
	-Added support for fetching legacy messages on UCP wiki
	-i18n() now uses I18nKey as an arguement to ensure all translation IDs are typed correctly and expected.
-Updated code to use JQuery typing, custom MediaWiki typing, and an extended window; window calls no longer use <any>
-Added wikia-chiclet-button to CSS for UCP support
-Removed old code / messages about Wikia Maps feature, as it has been removed
-Converted rc "arr_" images to CSS as uri data. This was done for 2 reasons:
	-Encase those png image are ever removed (since they are no longer used on UCP)
	-To be more efficient (better than manually having an img tag each time)

== V2.13b - 22 August 2020 ==
-Modals now use Modal.js and reworked to work on UCP
-Added CSS and JS fixes for features that scripts expected that were removed on UCP wikis
-Fixed various UCP related issues


== V2.13 - 15 August 2020 ==
-Fixed UCP fandom wikis not loading due to code trying to use old log system for all fandom wikis
-Fixed issue with UCP wiki favicons not showing correct image (seems fandom doesn't set "favicon" attribute correctly)
-Updated code to account for discussions now having 3 types; forum (normal), message wall, and article comments
-Link behavior for message walls somewhat fixed; article comments are not
-meta/repo changes:
	-"branches" folder removed, and code moved to git branches
	-removed "build" folder from the repo and added it to .gitignore


== V2.12b - 6 October 2019 ==
-Translations added for tr - provided by BaRaN6161TURK
-Analytiics link added to WikiPanel (if it's a wikia wiki, and you have the "analytics" right)
-Fixing some stuff that still uses wikia urls


== V2.12 - 8 March 2019 ==
-Updating parsing of wiki list
	-http(s) and ending slashes are now allowed (to support new wikia /lang/ wiki format)